[package]
name = "nobsign"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

keywords = ["cryptography", "signature", "hmac"]
description = "A simple but effective sign library, written in Rust"

homepage = "https://github.com/badboy/nobsign"
documentation = "http://badboy.github.io/nobsign/"
repository = "https://github.com/badboy/nobsign"

license = "BSD-3-Clause"
readme = "README.md"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
]

[dependencies]
rustc-serialize = "0.3.19"
time = "0.1.35"
byteorder = "0.5.0"
ring = "0.2.3"
